# Warships

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  warships  warships.cbp
configs/: game.cg  game_reserve.cg
docs/: game.md  launch.md  menu.md
include/: bonus.h  field.h  game.h  gamerules.h  parser.h  ship.h  standards.h  ui.h  user.h
src/: bonus.cpp  field.cpp  game.cpp  gamerules.cpp  main.cpp  parser.cpp  ship.cpp  ui.cpp  user.cpp
